# bscose

./: .gitignore  AUTHORS.md  README.md  pyproject.toml
bscose/construction/: chain.py  data.py  event.py  graph.py  node.py  parameter.py  port.py  util.py
bscose/example_nodes/: math_examples.py
tests/test_construction/: test_chains.py  test_graphs.py  test_nodes.py
